# rag-lint

./: README.md  pyproject.toml
data/corpus/acme_financial/: analyst_onboarding_guide.md  annual_report_2024_strategy.md  client_relationship_meridian_capital.md  earnings_prep_q1_2026.md  handbook_code_of_conduct.md  internal_faq_working_with_counsel.md  it_policy_acceptable_use.md  it_policy_acceptable_use_unredacted.md  ma_memo_project_falcon_rationale.md  press_release_q3_2025_earnings.md  quarterly_outlook_draft.md  research_note_techco_internal.md  sector_research_private_credit.md  vendor_contract_summary.md
examples/: README.md  probe_leak.py
runs/fixtures/: baseline_report.html  baseline_stdout.txt  probe_leak.txt
src/rag_lint/: __init__.py  chunking.py  cli.py  embeddings.py  loader.py  models.py
src/rag_lint/reporters/: html.py  shingles.py  stdout.py
src/rag_lint/reporters/templates/: report.html.j2
src/rag_lint/rules/: base.py  r001_missing_classification.py  r002_near_duplicate.py  r003_cross_class_overlap.py
